--- a/test3.html
+++ b/test3.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Created from Thang_branch</h1>
     <h2>Test from branch1</h2>
     <h2>Test from branch_masterTin one more</h2>
-</body>
-
+  </body>
 </html>
