--- a/test3.html
+++ b/test3.html
@@ -10,5 +10,6 @@
     <h1>Created from Thang_branch</h1>
     <h2>Test from branch1</h2>
     <h2>Test from branch_masterTin one more</h2>
+    <h2>This fucking line doesn't have in branch_masterTin</h2>
   </body>
 </html>
