--- a/test3.html
+++ b/test3.html
@@ -11,5 +11,6 @@
     <h2>Test from branch1</h2>
     <h2>Test from branch_masterTin one more</h2>
     <h2>This fucking line doesn't have in branch_masterTin</h2>
+    <h2>This fucking line doesn't have in master</h2>
   </body>
 </html>
